# AegisThreat

./: LICENSE  README.md  dashboard.html  pyproject.toml  requirements.txt
aegis/: __init__.py  cli.py
aegis/agents/: __init__.py  base.py  defense.py  detection.py  tracing.py
aegis/api/: __init__.py  auth.py  server.py  websocket.py
aegis/api/routes/: chains.py  decisions.py  fragments.py
aegis/connectors/: __init__.py  siem.py  soar.py
aegis/core/: __init__.py  alert_dedup.py  bus.py  models.py  persistence.py  security.py
aegis/inference/: __init__.py  alert_cluster.py  bayesian.py  path_pruner.py  path_scorer.py
aegis/knowledge/: __init__.py  attck_loader.py  graph.py  schema.cypher
aegis/llm/: __init__.py  client.py
aegis/sandbox/: __init__.py  arbitrator.py  debate.py  mcts.py  red_team.py
config/: agent_config.yaml  audit_logging.yaml  settings.py
docker/: Dockerfile  Dockerfile.kafka  Dockerfile.neo4j  docker-compose.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md  PRODUCTION_GAP.md  PRODUCTION_READINESS.md
tests/: test_agent_workflow.py  test_alert_dedup.py  test_path_pruner.py  test_sandbox_security.py
tools/: attck_importer.py  data_generator.py
