[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis-threat"
version = "0.1.0"
description = "Multi-Agent APT Attack Chain Tracing & Adaptive Defense System"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "AegisThreat Team"}
]
keywords = ["cybersecurity", "apt", "attack-chain", "multi-agent", "threat-intelligence"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "kafka-python>=2.0",
    "neo4j>=5.18",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "torch>=2.2",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "black>=24.0",
    "ruff>=0.2",
    "mypy>=1.8",
]
ml = [
    "torch-geometric>=2.5",
    "transformers>=4.38",
    "sentence-transformers>=2.5",
    "vllm>=0.2",
]
flink = [
    "apache-flink>=1.18",
]
all = [
    "aegis-threat[dev,ml,flink]",
]

[project.scripts]
aegis-demo = "aegis.cli:demo"
aegis-server = "aegis.api.server:main"
aegis-data-gen = "tools.data_generator:main"

[tool.setuptools.packages.find]
include = ["aegis*", "config*", "tools*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
